# LINGI2144---Assignement-2

./: CMakeLists.txt  malware.yar  run_tests.sh
evil/: malware_1.c  malware_10.c  malware_2.c  malware_3.c  malware_4.c  malware_5.c  malware_6.c  malware_7.c  malware_8.c  malware_9.c
passwd/: malware_1.c  malware_2.c  malware_3.c  malware_4.c  malware_5.c  malware_6.c  malware_7.c  malware_8.c
watchdog/: malware_1.c  malware_10.c  malware_2.c  malware_3.c  malware_4.c  malware_5.c  malware_6.c  malware_7.c  malware_8.c  malware_9.c
